<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".TimeCostCalcHandler">

    <EditText
        android:id="@+id/weeklyExpensesInput"
        android:layout_width="184dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/input_text_design"
        android:digits="0123456789."
        android:fontFamily="Arial"
        android:inputType="numberDecimal"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyIncomeInput" />

    <EditText
        android:id="@+id/weeklyIncomeInput"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/input_text_design"
        android:digits="0123456789."
        android:fontFamily="Arial"
        android:inputType="numberDecimal"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalPriceInput" />

    <EditText
        android:id="@+id/goalPriceInput"
        android:layout_width="243dp"
        android:layout_height="34dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/goalPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/goalNameInput" />

    <EditText
        android:id="@+id/goalNameInput"
        android:layout_width="244dp"
        android:layout_height="35dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/input_text_design"
        android:fontFamily="Arial"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mottoText" />

    <TextView
        android:id="@+id/daysTillCompletionOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="Arial"
        android:text=""
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintStart_toEndOf="@+id/daysTillCompletionLabel"
        app:layout_constraintTop_toBottomOf="@+id/weeklyExpensesInput" />

    <TextView
        android:id="@+id/daysTillCompletionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:fontFamily="Arial"
        android:text="Days to Complete:"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeeklyExpensesLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/goalNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="Arial"
        android:text="Goal Name:"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintEnd_toStartOf="@+id/goalNameInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/WeeklyExpensesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="Arial"
        android:text="Weekly Expenses:"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintEnd_toStartOf="@+id/weeklyExpensesInput"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyIncomeLabel" />

    <TextView
        android:id="@+id/weeklyIncomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="Weekly Income:"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintEnd_toStartOf="@+id/weeklyIncomeInput"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalPriceLabel" />

    <TextView
        android:id="@+id/goalPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="Arial"
        android:text="Goal Price:"
        android:textColor="@color/fontColor"
        android:textSize="9.5pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalNameLabel" />

    <TextView
        android:id="@+id/mottoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Arial"
        android:gravity="center"
        android:text="Reach your savings goals today!"
        android:textColor="@color/fontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="Arial"
        android:gravity="center"
        android:text="Time Cost Calculator"
        android:textColor="@color/fontColor"
        android:textSize="11pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="413dp"
        android:layout_height="70dp"
        android:background="@color/barColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/barColor"
        android:filterTouchesWhenObscured="false"
        android:fontFamily="Arial"
        android:stateListAnimator="@null"
        android:text="Save Goal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toEndOf="@+id/mainPig"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <ImageView
        android:id="@+id/mainPig"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/pig"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="320dp"
        android:layout_height="2dip"
        android:background="@color/fontColor"
        android:paddingBottom="10dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/barColor"
        android:filterTouchesWhenObscured="false"
        android:fontFamily="Arial"
        android:stateListAnimator="@null"
        android:text="Calculate"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysTillCompletionLabel"
        app:layout_constraintVertical_bias="0.034" />

</androidx.constraintlayout.widget.ConstraintLayout>